# docmodel

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py
docmodel/: attention.py  collator.py  configuration_roberta.py  custom_split.py  dataset.py  distributions.py  doc_model.py  etl_utils.py  filter_dataset.py  filtering_fns.py  layout_model.py  modeling_roberta.py  sample.py  sketch.py  test_acc.py  tokenization_layoutlmv2.py  tokenization_roberta.py  train.py  trainer.py  visualize_dataset.py  visualize_model.py  word_counts.py
docmodel/benchmarks/: dataset.py  train.py  train_mlflow.py
docmodel/scripts/: sketch.py
requirements/: requirements.txt
