[tool.poetry]
name = "docmodel"
version = "0.1.0"
description = "document understanding model for certain tasks"
authors = ["tobiadefami <tobiadefami@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
protobuf = "^3.9.2"
seaborn = "^0.12.2"
datasets = "^2.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
